--- a/css/style.css
+++ b/css/style.css
@@ -1291,7 +1291,7 @@ body.ie ._ibg img {
 }
 
 .tabs-product__btn {
-  margin: 15px auto 0 auto;
+  margin: 15px auto 30px auto;
 }
 
 .tabs-product__image {
@@ -1381,6 +1381,59 @@ body.ie ._ibg img {
   font-size: calc(15px + 3 * ((100vw - 320px) / 1600));
   line-height: 21px;
   color: rgba(98, 60, 25, 0.96);
+}
+
+.collect {
+  background-color: #fff0e1;
+  padding-top: calc(30px + 16 * ((100vw - 320px) / 1600));
+  padding-bottom: calc(30px + 16 * ((100vw - 320px) / 1600));
+}
+
+.collect-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.collect-body__column {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 50%;
+          flex: 0 1 50%;
+}
+
+.collect-block {
+  padding-top: calc(60px + 72 * ((100vw - 320px) / 1600));
+  padding-bottom: calc(60px + 72 * ((100vw - 320px) / 1600));
+}
+
+.collect-block__title {
+  max-width: 323px;
+  margin: 0px 0px 30px 0px;
+}
+
+.collect-block__description {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 18px;
+  color: rgba(98, 60, 25, 0.96);
+  margin: 0px 0px 30px 0px;
+  max-width: 139px;
+}
+
+.collect-block__image {
+  width: 75%;
+  height: auto;
+  margin: 0 auto;
+}
+
+.collect-block__image img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 
 @media (min-width: 991.98px) {
@@ -1611,6 +1664,45 @@ body.ie ._ibg img {
             flex: 0 0 75%;
     padding: 0px 0px 0px 0px;
     margin: 0px auto 30px auto;
+  }
+
+  .collect-body {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .collect-body__column {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+  }
+
+  .collect-block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 30px 0px 30px 0px;
+  }
+
+  .collect-block__title {
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .collect-block__description {
+    text-align: center;
   }
 }
 
