--- a/css/style.css
+++ b/css/style.css
@@ -1424,7 +1424,7 @@ body.ie ._ibg img {
 }
 
 .collect-block__image {
-  width: 75%;
+  width: 100%;
   height: auto;
   margin: 0 auto;
 }
@@ -1703,6 +1703,10 @@ body.ie ._ibg img {
   .collect-block__description {
     text-align: center;
   }
+
+  .collect-block__image {
+    width: 75%;
+  }
 }
 
 @media (max-width: 570px) {
@@ -1745,6 +1749,12 @@ body.ie ._ibg img {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
+  }
+}
+
+@media (max-width: 425px) {
+  .collect-block__image {
+    width: 100%;
   }
 }
 
