--- a/css/style.css
+++ b/css/style.css
@@ -1160,16 +1160,7 @@ body.ie ._ibg img {
 }
 
 .footer__content-adaptives {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 30px 0px 0px 0px;
+  display: none;
 }
 
 .footer-menu__list {
@@ -1362,6 +1353,14 @@ body.ie ._ibg img {
   background-color: #fff0e1;
   border-radius: 27px;
   padding: 32px 46px 22px 46px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
 }
 
 .tabs-product__btn {
@@ -1392,6 +1391,9 @@ body.ie ._ibg img {
 .tabs-product__list {
   margin: 0px 0px 16px 0px;
   width: 236px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .tabs-product__list-item {
@@ -1400,6 +1402,7 @@ body.ie ._ibg img {
   font-size: calc(14px + 1 * ((100vw - 320px) / 1600));
   line-height: 18px;
   color: rgba(98, 60, 25, 0.96);
+  list-style: unset;
 }
 
 .tabs-product__size {
@@ -1413,11 +1416,11 @@ body.ie ._ibg img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  width: 240px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 0 auto 11px auto;
+  text-align: center;
 }
 
 .tabs-product__size-item {
@@ -1658,6 +1661,7 @@ body.ie ._ibg img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  height: 100%;
 }
 
 .reviews-block__image {
@@ -1678,6 +1682,9 @@ body.ie ._ibg img {
 }
 
 .reviews-block__content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   margin: 0px 0px 0px 27px;
 }
 
@@ -1918,6 +1925,19 @@ body.ie ._ibg img {
 
   .select__options {
     font-size: 18px;
+  }
+
+  .footer__content-adaptives {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin: 30px 0px 0px 0px;
   }
 
   .footer-menu__list li:first-child {
