--- a/css/style.css
+++ b/css/style.css
@@ -1012,7 +1012,7 @@ body.ie ._ibg img {
   display: inline-block;
 }
 
-.menu__link ._active {
+.menu__link._active {
   background: rgba(188, 118, 54, 0.96);
   border-radius: 100px;
   color: #fff;
@@ -1263,11 +1263,11 @@ body.ie ._ibg img {
   display: block;
 }
 
-.menu {
+.menus {
   padding: 50px 0;
 }
 
-.menu__title {
+.menus__title {
   margin-right: calc(50px + 50 * ((100vw - 320px) / 1600));
 }
 
@@ -1434,12 +1434,6 @@ body.ie ._ibg img {
   cursor: pointer;
 }
 
-.tabs-product__size-item._active {
-  background: rgba(188, 118, 54, 0.96);
-  border-radius: 100px;
-  color: #fff;
-}
-
 .tabs-product__info {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1458,6 +1452,12 @@ body.ie ._ibg img {
   font-size: calc(15px + 3 * ((100vw - 320px) / 1600));
   line-height: 21px;
   color: rgba(98, 60, 25, 0.96);
+}
+
+.menus__active {
+  background: rgba(188, 118, 54, 0.96);
+  border-radius: 100px;
+  color: #fff;
 }
 
 .collect {
@@ -1799,9 +1799,7 @@ body.ie ._ibg img {
     right: 0;
     display: block;
     background-color: #eac7a7;
-    padding: 50px 25px;
-    overflow-y: auto;
-    height: auto;
+    padding: 30px 25px 70px 25px;
   }
 
   .menu__body._active {
@@ -1812,6 +1810,9 @@ body.ie ._ibg img {
     -webkit-transform: translateX(0);
         -ms-transform: translateX(0);
             transform: translateX(0);
+    width: 40%;
+    overflow: auto;
+    height: 100vh;
   }
 
   .menu__list {
@@ -1825,7 +1826,13 @@ body.ie ._ibg img {
   }
 
   .menu__list li {
-    margin: 0px 0px 0px 0px;
+    margin: 0px 0px 15px 0px;
+  }
+
+  .menu__link {
+    font-size: 18px;
+    line-height: 34px;
+    height: 34px;
   }
 
   .header-right {
@@ -1889,7 +1896,7 @@ body.ie ._ibg img {
     bottom: calc(50% - 1px);
   }
 
-  .menu__title {
+  .menus__title {
     margin: 0px 0px 30px 0px;
   }
 
@@ -2212,8 +2219,22 @@ body.ie ._ibg img {
   }
 
   .header-right__phone {
-    padding: 0px 0px 0px 0px;
+    padding: 0px 0px 50px 0px;
     margin: 40px 0px 0px 0px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .header-right__phone-number {
+    font-size: 20px;
+    line-height: 32px;
+    margin: 0px 0px 15px 0px;
+  }
+
+  .header-right__phone-feedback a {
+    font-size: 16px;
+    line-height: 24px;
   }
 
   .header-right__cart {
